--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<p>
 				<a href="https://twitter.com/najamikitten" target="_blank">twitter</a>
 				<a href="https://www.youtube.com/@najamikitten" target="_blank">youtube</a>
-				<a href="https://steamcommunity.com/id/x3e" target="_blank">main</a>
-				<a href="https://steamcommunity.com/id/waldek-external" target="_blank">alt</a>
+				<a href="https://steamcommunity.com/id/ambitna" target="_blank">main</a>
+				<a href="https://steamcommunity.com/id/x3e" target="_blank">alt</a>
 			</p>
 		</div>
 
